# ames

./: README.md  environment.yml  pyproject.toml
docs/: notes.md
notebooks/: 01_reading_raw_data.ipynb  02_analysis_and_preprocessing.ipynb  03_linear_regression_modeling.ipynb  03_regression_modeling.ipynb  04_benchmark_models.ipynb  experiment.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/model/: my_model.pkl
